# Lox-Interpreter

./: CMakeLists.txt  README.md  main.cpp  scanner.cpp  scanner.h  token.cpp  token.h
include/: ast.h  token.h
src/: ast-tools.cpp  ast-tools.h  error.h  main.cpp
src/data/: ast.h  expression.cpp  expression.h  statement.cpp  statement.h  token.cpp  token.h
src/interpreter/: Callable.cpp  Callable.h  Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  LoxObject.cpp  LoxObject.h  RuntimeError.cpp  RuntimeError.h
src/parser/: ParserError.cpp  parser.cpp  parser.h
src/resolver/: Resolver.cpp  Resolver.h
src/scanner/: scanner.cpp  scanner.h
src/utility/: ast-tools.cpp  ast-tools.h
